--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,37 @@
+<div>	List of Tools</div>
+
+<div *ngIf="showAddition" >
+  <div>
+  <label>Tool Name:</label>
+  <input type="text" pInputText [(ngModel)]="property"/>
+</div>
+  <div>
+  <label>Active:</label>
+  <p-inputSwitch [(ngModel)]="checked"></p-inputSwitch>
+  </div>
+</div>
+
+<div>
+		<div class="ui-table-globalfilter-container">
+			<input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
+      
+      <button pButton type="button" class="ui-button-secondary" icon="pi pi-cog" (click)="showAddition = !showAddition"></button>
+        </div> 
+        	
+	</div>
 <p-table #dt [value]="customers" [(selection)]="selectedCustomers" dataKey="id" styleClass="ui-table-customers"
 	[rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading"
 	[paginator]="true"
 	currentPageReportTemplate="Showing &#123;first&#125; to &#123;last&#125; of &#123;totalRecords&#125; entries"
 	[filterDelay]="0" [globalFilterFields]="['tool','active','action']">
-	<ng-template pTemplate="caption">
+	<!-- <ng-template pTemplate="caption">
 		List of Tools
 		<div class="ui-table-globalfilter-container">
 			<input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
-      <button pButton type="button" class="ui-button-secondary" icon="pi pi-cog"></button>
+      <button pButton type="button" class="ui-button-secondary" icon="pi pi-cog" (click)="showAddition = !showAddition"></button>
         </div> 
         	
-	</ng-template>
+	</ng-template> -->
 	<ng-template pTemplate="header">
 		<tr>
 			<th></th>
