--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,28 @@
-<div>	List of Tools</div>
+<div class="tool-master-title"> List of Tools</div>
 
-<div *ngIf="showAddition" >
-  <div>
-  <label>Tool Name:</label>
-  <input type="text" pInputText [(ngModel)]="property"/>
+<div *ngIf="showAddition">
+	<div>
+		<label>Tool Name:</label>
+		<input type="text" pInputText [(ngModel)]="property"/>
 </div>
-  <div>
-  <label>Active:</label>
-  <p-inputSwitch [(ngModel)]="checked"></p-inputSwitch>
-  </div>
-</div>
-
-<div>
-		<div class="ui-table-globalfilter-container">
-			<input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
-      
-      <button pButton type="button" class="ui-button-secondary" icon="pi pi-cog" (click)="showAddition = !showAddition"></button>
-        </div> 
-        	
+		<div>
+			<label>Active:</label>
+			<p-inputSwitch [(ngModel)]="checked"></p-inputSwitch>
+		</div>
 	</div>
-<p-table #dt [value]="customers" [(selection)]="selectedCustomers" dataKey="id" styleClass="ui-table-customers"
-	[rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]" [loading]="loading"
-	[paginator]="true"
-	currentPageReportTemplate="Showing &#123;first&#125; to &#123;last&#125; of &#123;totalRecords&#125; entries"
-	[filterDelay]="0" [globalFilterFields]="['tool','active','action']">
-	<!-- <ng-template pTemplate="caption">
+
+	<div class="ui-table-globalfilter-container">
+		<input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
+
+		<button pButton type="button" class="ui-button-secondary float-right" icon="pi pi-cog" (click)="showAddition = !showAddition"></button>
+	</div>
+
+	<p-table #dt [value]="customers" [(selection)]="selectedCustomers" dataKey="id" styleClass="ui-table-customers"
+		[rowHover]="true" [rows]="10" [showCurrentPageReport]="true" [rowsPerPageOptions]="[10,25,50]"
+		[loading]="loading" [paginator]="true"
+		currentPageReportTemplate="Showing &#123;first&#125; to &#123;last&#125; of &#123;totalRecords&#125; entries"
+		[filterDelay]="0" [globalFilterFields]="['tool','active','action']">
+		<!-- <ng-template pTemplate="caption">
 		List of Tools
 		<div class="ui-table-globalfilter-container">
 			<input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Global Search" />
@@ -32,53 +30,53 @@
         </div> 
         	
 	</ng-template> -->
-	<ng-template pTemplate="header">
-		<tr>
-			<th></th>
-			<th pSortableColumn="tool">Tool <p-sortIcon field="tool"></p-sortIcon>
-			</th>
-			<th pSortableColumn="active">Active <p-sortIcon field="active"></p-sortIcon>
-			</th>
-			<th pSortableColumn="action">Action <p-sortIcon field="action"></p-sortIcon>
-			</th>
-			<th></th>
-		</tr>
-		<tr>
-      <th></th>
-			<th>
-				<input pInputText type="text" (input)="dt.filter($event.target.value, 'tool', 'startsWith')" placeholder="Search by Tool" class="ui-column-filter">
+		<ng-template pTemplate="header">
+			<tr>
+				<th></th>
+				<th pSortableColumn="tool">Tool <p-sortIcon field="tool"></p-sortIcon>
+				</th>
+				<th pSortableColumn="active">Active <p-sortIcon field="active"></p-sortIcon>
+				</th>
+				<th pSortableColumn="action">Action <p-sortIcon field="action"></p-sortIcon>
+				</th>
+				<th></th>
+			</tr>
+			<tr>
+				<th></th>
+				<th>
+					<input pInputText type="text" (input)="dt.filter($event.target.value, 'tool', 'startsWith')" placeholder="Search by Tool" class="ui-column-filter">
       </th>
-			<th>
-				<input pInputText type="text" (input)="dt.filter($event.target.value, 'active', 'contains')" placeholder="Search by Status" class="ui-column-filter">
+				<th>
+					<input pInputText type="text" (input)="dt.filter($event.target.value, 'active', 'contains')" placeholder="Search by Status" class="ui-column-filter">
       </th>
-			<th>
-				
-      </th>
-			<th></th>
-		</tr>
-	</ng-template>
-	<ng-template pTemplate="body" let-customer>
-		<tr class="ui-selectable-row">
-      <td></td>
-			<td>
-				<span class="ui-column-title">Tool</span>
-				&#123;&#123;customer.name&#125;&#125;
-			</td>
-			<td>
-				<span class="ui-column-title">Active</span>
-				<span [class]="'flag flag-' + customer.country.code"></span>
-				<span style="vertical-align: middle; margin-left: .5em">&#123;&#123;customer.country.name&#125;&#125;</span>
-			</td>
-			<td>
-				<span class="ui-column-title">Action</span>
+				<th>
+
+				</th>
+				<th></th>
+			</tr>
+		</ng-template>
+		<ng-template pTemplate="body" let-customer>
+			<tr class="ui-selectable-row">
+				<td></td>
+				<td>
+					<span class="ui-column-title">Tool</span>
+					&#123;&#123;customer.tool&#125;&#125;
+				</td>
+				<td>
+					<span class="ui-column-title">Active</span>
+					<span [class]="'flag flag-' + customer.active"></span>
+					<span style="vertical-align: middle; margin-left: .5em">&#123;&#123;customer.active&#125;&#125;</span>
+				</td>
+				<td>
+					<span class="ui-column-title">Action</span>
 					<button pButton type="button" class="ui-button-secondary" icon="pi pi-cog"></button>
-			</td>
-      <td></td>
-		</tr>
-	</ng-template>
-	<ng-template pTemplate="emptymessage">
-		<tr>
-			<td colspan="8" style="text-align:left">No data found.</td>
-		</tr>
-	</ng-template>
-</p-table>
+				</td>
+				<td></td>
+			</tr>
+		</ng-template>
+		<ng-template pTemplate="emptymessage">
+			<tr>
+				<td colspan="8" style="text-align:left">No data found.</td>
+			</tr>
+		</ng-template>
+	</p-table>
